Fix issue where login and register buttons were not showing on mobile

--- a/app/assets/stylesheets/primitives.css
+++ b/app/assets/stylesheets/primitives.css
@@ -29,6 +29,7 @@ form input {
 button,
 input[type="submit"],
 .basic-button,
+.text-only-button,
 .red-button,
 .basic-card-button,
 .button-to {
